--- a/src/css/MainTable.css
+++ b/src/css/MainTable.css
@@ -147,7 +147,7 @@ h2 {
 }
 
 .cell input.blurred {
-  
+
   background-color: #744c9b;
   border: 1px solid rgb(226, 159, 253);
   color: white;
@@ -158,7 +158,7 @@ h2 {
   /* Red border on hover */
 }
 
-.greenBorder{
+.greenBorder {
   border-color: rgb(6, 188, 6) !important;
 }
 
@@ -199,6 +199,11 @@ h2 {
   justify-content: flex-start;
   align-items: center;
   margin: 8px 0;
+
+}
+
+.bottom-margin {
+  margin-bottom: 50vh;
 }
 
 .add-button,
@@ -221,7 +226,7 @@ h2 {
 }
 
 .save-button {
-  margin-top: 5rem;
+  margin-top: 1rem;
 }
 
 .next-button {
@@ -273,7 +278,7 @@ h2 {
   margin-bottom: 0.5vh;
   margin-top: 1vh;
   color: white;
-  width: 50%;
+  /* width: 50%; */
   /* max-width: 20%; */
 }
 
